--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "axios": "^1.4.0",
+    "ng-angular-popup": "^0.4.4",
     "ngx-toastr": "^17.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
